Changes made to README, adds comments to files

--- a/README
+++ b/README
@@ -1,1 +1,19 @@
 This is a photo gallery webpage.
+
+HTML:
+
+port.html is the main HTML file to open the webpage.
+
+////////
+///////
+
+CSS:
+
+port.css is the main CSS file for the webpage.
+
+///////
+
+
+JAVASCRIPT:
+
+script.js is the main JS file for the Webpage.
